2003-01-08  Jonathan M. Lange  <jml@mumak.net>

	* twisted/trial/*, bin/trial, twisted/scripts/trial.py,
	doc/man/trial.1: Added 'trial', a new unit testing framework for
	Twisted.

	* twisted/test/test_*, admin/runtests: Moved existing tests over to
	trial.

2003-01-06  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/python/microdom.py: Added beExtremelyLenient mode (for
	parsing "tag soup").  While this isn't quite as lenient as Mozilla
	or IE's code (it will, for example, translate
	<div><i><b>foo</i>bar</b></div> to <div><i><b>foo</b></i>bar</div>
	) I am still rather proud of the wide range of complete garbage
	that it will mangle into at least reasonably similar XHTML-esque
	documents.

2003-01-05  Brian Warner  <warner@lothar.com>

	* twisted/internet/cReactor/*, setup.py: Implement getDelayedCalls for
	cReactor. Create cDelayedCall class, implement .cancel(), .reset(),
	and .delay() for them.

2003-01-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/components.py: Fix bug due to interaction between
	Componentized subclasses and twisted.python.rebuild.rebuild()

	* twisted/python/reflect.py: Removed backwards compatability hack
	for deprecated name twisted.protocols.telnet.ShellFactory and empty
	oldModules dictionary.

2003-01-02  Brian Warner  <warner@lothar.com>

	* twisted/test/test_internet.py (DelayedTestCase): add test
	coverage for IReactorTime.getDelayedCalls
	
2002-12-30  Brian Warner  <warner@lothar.com>

	* pyunit/unittest.py (TestCase.__call__): clean the reactor between
	tests: cancel any leftover reactor.callLater() timers. This helps
	to keep deferred failures isolated to the test that caused them.

2002-12-30  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/*: added docstrings to most conch classes and functions

2002-12-30  Brian Warner  <warner@lothar.com>

	* twisted/spread/pb.py (Broker.connectionLost): clear localObjects
	too, to break a circular reference involving AuthServs that could