@@ -1,3 +1,9 @@
+2003-1-8  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/trial/unittest.py: add SkipTest exception, which tests can
+	raise in their various test* method to skip a test which is not
+	excpected to pass.
+
 2003-01-08  Jonathan M. Lange  <jml@mumak.net>
 
 	* twisted/trial/*, bin/trial, twisted/scripts/trial.py,
